cmake_minimum_required(VERSION 3.24)
if(NOT DEFINED IDF_TARGET)
    project(htcw_frame_arq VERSION 0.1.1)
    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_CXX_STANDARD_REQUIRED True)
    set(CMAKE_STATIC_LIBRARY_PREFIX "")
    set(CMAKE_SHARED_LIBRARY_PREFIX "")

    add_library(htcw_frame_arq src/source/frame_arq.c)
    target_include_directories(htcw_frame_arq PUBLIC
        "${PROJECT_SOURCE_DIR}"
        "${PROJECT_SOURCE_DIR}/src"
        "${PROJECT_BINARY_DIR}"
    )
else()
    idf_component_register(
        SRCS "./src/source/frame_arq.c"
        INCLUDE_DIRS "./src"
)
endif()